Java 8 compatible!
1) targetCompatibility = 8
2) - java.io.Serial
3) - Objects.requireNonNullElseGet
4) record → @Value @Accessors(fluent = true) class