@@ -18,46 +18,36 @@ repositories {
   mavenCentral()
 }
 
-sourceCompatibility = 17
-
 tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
-  options.release.set(17) // javac --release 7..18+
-  options.deprecation = false // todo step2: deprecated
+
+  sourceCompatibility = 17 // for the IDE support
+  targetCompatibility = 8
+  options.release.set(8) // javac --release 7..18+
+  options.deprecation = true
+  javaCompiler.set( javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(17)
+  })
 
   options.errorprone {
     enabled = true
     disableWarningsInGeneratedCode = true
     excludedPaths = ".*/(build/gen|test).*/.*"
     disable("MissingSummary")
+    disable("ParameterName")
+    disable("UnusedVariable")
+    errorproneArgs = ["--illegal-access=warn"]
   }
 }
 
 dependencies {
   errorprone "com.google.errorprone:error_prone_core:latest.release"
-  // https://javadoc.io/doc/com.google.errorprone/error_prone_annotations/latest/index.html
-  implementation("com.google.errorprone:error_prone_annotations:latest.release")
-  // https://javadoc.io/doc/com.google.code.findbugs/jsr305/latest/index.html  [x] remove? jsr305→jsr308 ^ Nope! This is THE WINNER!
-  implementation("com.google.code.findbugs:jsr305:latest.release")
-
+  // Java 8 support
+  annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release' // 0.4.2
+  compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release'
 
   implementation 'javax.servlet:servlet-api:2.5'
-
-  implementation 'org.slf4j:slf4j-api:1.7.+'
-  implementation("org.slf4j:jcl-over-slf4j:1.7.+")
-  implementation("org.slf4j:log4j-over-slf4j:1.7.+")
-
-  implementation 'com.google.guava:guava:31.1-jre'
-  implementation 'org.mvel:mvel2:latest.release'// 2.4.14
-
-  implementation("com.github.ben-manes.caffeine:caffeine:2.+")
-
-  implementation 'org.apache.commons:commons-lang3:3.+'
-  implementation 'commons-lang:commons-lang:2.+'
-  implementation 'commons-fileupload:commons-fileupload:1.3.+'
-
-  implementation "org.apache.velocity:velocity:1.+"
 
   implementation project(':click')
   implementation project(':click-extras')
@@ -74,7 +64,6 @@ dependencies {
   testImplementation 'junit:junit:4.+'
   testImplementation 'org.mockito:mockito-inline:+'
 
-
   testImplementation project(':click-mock')
 
 
@@ -83,16 +72,22 @@ dependencies {
   tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
       "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
       "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
-
-}
-
-configurations {
-  all*.exclude group: "velocity", module: "velocity" // 1.3 лезет откуда-то!
-  all*.exclude group: "commons-logging", module: "commons-logging" // 1.3 лезет откуда-то!
 }
 // https://tomgregory.com/how-to-exclude-gradle-dependencies/
 configurations.all { // .implementation
   exclude group: 'velocity', module: 'velocity'
+  exclude group: "commons-logging", module: "commons-logging"
+}
+
+publishing {
+  publications { // artifactId = folder name
+    maven(MavenPublication) {
+      from components.java
+    }
+  }
+}
+java {
+  withSourcesJar()
 }
 
 idea {
@@ -104,30 +99,23 @@ idea {
 
 test {
   useJUnit()
-  maxHeapSize = "500m"
+  testLogging {
+    events "passed", "skipped", "failed"
+    showStandardStreams = true // show standard out & err of the test JVM on the console
+    showExceptions = true
+    exceptionFormat = 'full'
+  }
   enableAssertions = true
-
-  testLogging.showStandardStreams = true // show standard out & err of the test JVM on the console
+  maxHeapSize = "500m"
 
   System.setProperty("slf4j.detectLoggerNameMismatch", "true")
   System.setProperty("file.encoding", "UTF-8")
   System.setProperty("user.language", "en")
   Locale.setDefault(new Locale("en", "US"));
 }
-
 lombok {
   version = "latest.release"
 }
 sonarLint {
   ignoreFailures = true
-}
-publishing {
-  publications { // artifactId = folder name
-    maven(MavenPublication) {
-      from components.java
-    }
-  }
-}
-java {
-  withSourcesJar()
 }
